# bodhi-llms

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
bodhi/: __init__.py  core.py  prompts.py  types.py
bodhi/providers/: __init__.py  openai.py
docs/: index.html
examples/: basic_openai.py  custom_provider.py
tests/: test_bodhi.py
