[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bodhi-llm"
version = "0.1.2"
description = "BODHI: Epistemic virtues (curiosity and humility) for LLM responses"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.10"
authors = [
    { name = "Sebastian Andres Cajas Ordonez", email = "sebasmos@mit.edu" },
]
keywords = [
    "llm",
    "ai",
    "epistemic",
    "humility",
    "curiosity",
    "medical-ai",
    "uncertainty",
    "healthcare",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
all = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sebasmos/bodhi"
Documentation = "https://github.com/sebasmos/bodhi#readme"
Repository = "https://github.com/sebasmos/bodhi"
Issues = "https://github.com/sebasmos/bodhi/issues"

[tool.hatch.build.targets.wheel]
packages = ["bodhi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
